[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]

[sub_resource type="AnimatedTexture" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 21 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Placeholder_Image" type="Sprite" parent="."]
scale = Vector2( 44, 44 )
texture = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Player_UI_Layer" type="CanvasLayer" parent="."]

[node name="Oxygen_Timer" type="Timer" parent="Player_UI_Layer"]
wait_time = 5.0
autostart = true

[node name="Oxygen_Bar" type="ProgressBar" parent="Player_UI_Layer"]
margin_left = 11.0
margin_top = 11.0
margin_right = 229.0
margin_bottom = 45.0
max_value = 1000.0
value = 1000.0
rounded = true

[connection signal="timeout" from="Player_UI_Layer/Oxygen_Timer" to="." method="_on_Oxygen_Timer_timeout"]
